--- a/BlenderRenderFarm/src/com/github/nikywilliams/config.conf
+++ b/BlenderRenderFarm/src/com/github/nikywilliams/config.conf
@@ -1,20 +1,23 @@
 # Blender executable location on this box
+[EXECUTABLE]
 D:\Programs\blender-2.78c-windows64\
 
 # Blender .blend file location on remote box to monitor
 # For Linux, to mount a Windows share
 #   mount -t cifs //192.168.1.10/RemoteDirectory /mnt/LocalDirectory -o username=user,password=pwd,domain=domainIfApplicable
+[BLEND_FILES]
 \\192.168.1.65\D\BlendFiles\
 
+[OUTPUT_LOCATION]
 # Output location for the images on the remote box
 \\192.168.1.65\D\RenderImages\
 
+[THREADS]
 # Threads to use while rendering
 -t 6
 
+[RENDER_TYPE]
 # Render full animation or a certain frame
 # -a is full animation
 # -f n is a certain frame
 -a
-
-
