--- a/config.conf
+++ b/config.conf
@@ -1,11 +1,11 @@
 # Blender executable location on this box
-[EXECUTABLE]
+[BLENDER_EXECUTABLE]
 D:\Programs\blender-2.78c-windows64\
 
 # Blender .blend file location on remote box to monitor
 # For Linux, to mount a Windows share
 #   mount -t cifs //192.168.1.10/RemoteDirectory /mnt/LocalDirectory -o username=user,password=pwd,domain=domainIfApplicable
-[BLEND_FILES]
+[BLEND_FILES_LOCATION]
 \\192.168.1.65\D\BlendFiles\
 
 [OUTPUT_LOCATION]
