Config files read and processed for the most part Watchdog checks for new .blend files List is kept updated so processed blend files aren't reprocessed Blender will run in background from Java and render test project based on config settings

--- a/config.conf
+++ b/config.conf
@@ -6,18 +6,13 @@ D:\Programs\blender-2.78c-windows64\
 # For Linux, to mount a Windows share
 #   mount -t cifs //192.168.1.10/RemoteDirectory /mnt/LocalDirectory -o username=user,password=pwd,domain=domainIfApplicable
 [BLEND_FILES_LOCATION]
-\\192.168.1.65\D\BlendFiles\
+\\192.168.1.50\Media\BlendFiles\
 
-[OUTPUT_LOCATION]
 # Output location for the images on the remote box
-\\192.168.1.65\D\RenderImages\
+[OUTPUT_LOCATION]
+\\192.168.1.50\Media\BlendImages\
 
-[THREADS]
 # Threads to use while rendering
--t 6
+[THREADS]
+6
 
-[RENDER_TYPE]
-# Render full animation or a certain frame
-# -a is full animation
-# -f n is a certain frame
--a
