Finished tweaking a few settings and behaviors

--- a/config.conf
+++ b/config.conf
@@ -16,3 +16,8 @@ D:\Programs\blender-2.78c-windows64\
 [THREADS]
 6
 
+# Render full animation or a certain frame
+# a is full animation
+# f x is a certain frame
+[RENDER_TYPE]
+f 15
