--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
 *.ear
 
@@ -12,3 +11,4 @@
 hs_err_pid*
 build
 /processed-files.prc
+/dist/processed-files.prc
